# STDIORedirect

./: CMakeLists.txt  README.md  SR.i  STDIORedirect.java  STDIORedirectNative.cpp  STDIORedirectNative.h  STDIORedirectToLog4j.java  log4j.properties  logfile.out  testJniStdio.java  testSTDIO.java
